# PvZ-Emulator

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  PvZ-Emulator.sln  PvZ-Emulator.vcxproj  PvZ-Emulator.vcxproj.filters  README.md  main.cpp  pybind.cpp  setup.py  world.cpp  world.h
debugger/: PvZ-Emulator-Debugger.njsproj  README.md  index.js  index.js.map  package-lock.json  package.json  tsconfig.json  webpack.config.js
debugger/src/: ConfigFrame.tsx  JSONRequest.ts  MainFrame.tsx  SceneFrame.tsx  app.tsx  index.html
debugger/src/assets/: style.css
debugger/src/objects/: Emulator.ts  Griditem.ts  Plant.ts  Projectile.ts  Reanim.ts  Scene.ts  Zombie.ts
learning/: iz_observation.cpp  iz_observation.h  observation_factory.cpp  observation_factory.h
object/: common.cpp  common.h  griditem.h  obj_list.h  plant.cpp  plant.h  plant_reanim_data.cpp  plant_reanim_data.h  projectile.cpp  projectile.h  scene.cpp  scene.h  zombie.cpp  zombie.h  zombie_reanim_data.cpp  zombie_reanim_data.h
system/: damage.cpp  damage.h  debuff.cpp  debuff.h  endgame.h  griditem.h  griditem_factory.cpp  griditem_factory.h  ice_path.h  reanim.cpp  reanim.h  rng.h  spawn.cpp  spawn.h  sun.cpp  sun.h  util.cpp  util.h
system/plant/: blover.cpp  cactus.cpp  chomper.cpp  cob_cannon.cpp  coffee_bean.cpp  grave_buster.cpp  imitater.cpp  mushroom_family.cpp  pea_family.cpp  plant.h  plant_base.cpp  plant_factory.cpp  plant_factory.h  plant_system.cpp  plant_system.h  potato_mine.cpp  shield_plants.cpp  spike_family.cpp  squash.cpp  starfruit.cpp  tangle_kelp.cpp  torchwood.cpp  umbrella_leaf.cpp
system/projectile/: projectile_factory.cpp  projectile_factory.h  projectile_system.cpp  projectile_system.h
system/zombie/: _ground.cpp  backup_dancer.cpp  balloon.cpp  bungee.cpp  catapult.cpp  common_zombie.cpp  dancing.cpp  digger.cpp  dolphin_rider.cpp  football.cpp  gargantuar.cpp  imp.cpp  jack_in_the_box.cpp  ladder.cpp  newspaper.cpp  pogo.cpp  pole_vaulting.cpp  snorkel.cpp  yeti.cpp  zombie.h  zombie_factory.cpp  zombie_factory.h  zombie_system.cpp  zombie_system.h  zomboni.cpp
